@@ -21,6 +21,11 @@
  */
 class tx_extdeveval_buildautoloadregistry {
 	/**
+	 * @var array
+	 */
+	protected $classNamePrefixes = array('tx_', 'Tx_', 'user_');
+
+	/**
 	 * Build the autoload registry for a given extension and place it ext_autoload.php.
 	 *
 	 * @param	string	$extensionName	Name of the extension
@@ -29,22 +34,28 @@ class tx_extdeveval_buildautoloadregistry {
 	 */
 	public function createAutoloadRegistryForExtension($extensionName, $extensionPath) {
 		$classNameToFileMapping = array();
-		$errors = $this->buildAutoloadRegistryForSinglePath($classNameToFileMapping, $extensionPath, '.*tslib.*', '$extensionPath . \'|\'');
-		if ($errors) {
-			return $errors;
-		}
-		$globalPrefix = '$extensionPath = t3lib_extMgm::extPath(\'' . $extensionName . '\');';
+		$globalPrefixes = array();
 
-		$extensionPrefix = str_replace('_', '', $extensionName);
+		$globalPrefixes[] = '$extensionPath = t3lib_extMgm::extPath(\'' . $extensionName . '\');';
+		$this->buildAutoloadRegistryForSinglePath($classNameToFileMapping, $extensionPath, '.*tslib.*', '$extensionPath . \'|\'');
+
+		// Processes special 'classes/' or 'Classes/' folder and use a shorter notation for that:
+		// (files will be overridden in the class name to file mapping)
+		$extensionClassesDirectory = $this->getExtensionClassesDirectory($extensionPath);
+		if ($extensionClassesDirectory !== FALSE) {
+			$globalPrefixes[] = '$extensionClassesPath = t3lib_extMgm::extPath(\'' . $extensionName . '\') . \'' . $extensionClassesDirectory . '\';';
+			$this->buildAutoloadRegistryForSinglePath($classNameToFileMapping, $extensionPath . $extensionClassesDirectory, '.*tslib.*', '$extensionClassesPath . \'|\'');
+		}
+
+		$extensionPrefix = $this->getExtensionPrefix($extensionName);
 		$errors = array();
 		foreach ($classNameToFileMapping as $className => $fileName) {
-			if (!(strpos($className, 'tx_' . $extensionPrefix) === 0)
-			    && !(strpos($className, 'user_' . $extensionPrefix) === 0)) {
-				$errors[] = $className . ' does not start with tx_' . $extensionPrefix . ' or user_' . $extensionPrefix . ' and is not added to the autoloader registry.';
+			if ($this->isValidClassNamePrefix($className, $extensionPrefix) === FALSE) {
+				$errors[] = $className . ' does not start with Tx_' . $extensionPrefix . ', tx_' . $extensionPrefix . ' or user_' . $extensionPrefix . ' and is not added to the autoloader registry.';
 				unset($classNameToFileMapping[$className]);
 			}
 		}
-		$autoloadFileString = $this->generateAutoloadPHPFileData($classNameToFileMapping, $globalPrefix);
+		$autoloadFileString = $this->generateAutoloadPHPFileData($classNameToFileMapping, $globalPrefixes);
 		if (@file_put_contents($extensionPath . 'ext_autoload.php', $autoloadFileString)) {
 			t3lib_div::fixPermissions($extensionPath . 'ext_autoload.php');
 			$errors[] = 'Wrote the following data: <pre>' . htmlspecialchars($autoloadFileString) . '</pre>';
@@ -84,15 +95,15 @@ class tx_extdeveval_buildautoloadregistry {
 	 * Does NOT escape the values in the associative array. Includes the <?php ... ?> syntax and an optional global prefix.
 	 *
 	 * @param	array	$classNameToFileMapping class name to file mapping
-	 * @param	string	$globalPrefix	Global prefix which is prepended to all code.
+	 * @param	array	$globalPrefixes	Global prefixes which are prepended to all code.
 	 * @return	string	The full PHP string
 	 */
-	protected function generateAutoloadPHPFileData($classNameToFileMapping, $globalPrefix = '') {
+	protected function generateAutoloadPHPFileData($classNameToFileMapping, array $globalPrefixes = array()) {
 		$output = '<?php' . PHP_EOL;
 		$output .= '// DO NOT CHANGE THIS FILE! It is automatically generated by extdeveval::buildAutoloadRegistry.' . PHP_EOL;
 		$output .= '// This file was generated on ' . date('Y-m-d H:i') . PHP_EOL;
 		$output .= PHP_EOL;
-		$output .= $globalPrefix . PHP_EOL;
+		$output .= implode(PHP_EOL, $globalPrefixes) . PHP_EOL;
 		$output .= 'return array(' . PHP_EOL;
 		foreach ($classNameToFileMapping as $className => $quotedFileName) {
 			$output .= '	\'' . $className . '\' => ' . $quotedFileName . ',' . PHP_EOL;
@@ -112,9 +123,6 @@ class tx_extdeveval_buildautoloadregistry {
 	 * @return void
 	 */
 	protected function buildAutoloadRegistryForSinglePath(&$classNameToFileMapping, $path, $excludeRegularExpression = '', $valueWrap = '\'|\'') {
-		if (file_exists($path . 'Classes/')) {
-			return "<b>This appears to be a new-style extension which has its PHP classes inside the Classes/ subdirectory. It is not needed to generate the autoload registry for these extensions.</b>";
-		}
 		$extensionFileNames = t3lib_div::removePrefixPathFromList(t3lib_div::getAllFilesAndFoldersInPath(array(), $path, 'php', FALSE, 99, $excludeRegularExpression), $path);
 
 		foreach ($extensionFileNames as $extensionFileName) {
@@ -203,7 +211,50 @@ class tx_extdeveval_buildautoloadregistry {
 		}
 		return $returnValue;
 	}
+
+	/**
+	 * Determines whether a class name starts with tx_, Tx_ or user_.
+	 *
+	 * @param string $className Name of the class to be checked
+	 * @param string $extensionPrefix The extension prefix (e.g. ttnews, not tt_news)
+	 * @return
+	 */
+	protected function isValidClassNamePrefix($className, $extensionPrefix) {
+		foreach ($this->classNamePrefixes as $classNamePrefix) {
+			if (strpos($className, $classNamePrefix . $extensionPrefix) === 0) {
+				return TRUE;
+			}
+		}
+
+		return FALSE;
+	}
+
+	/**
+	 * Gets the extension prefix (e.g. tt_news will be ttnews).
+	 *
+	 * @param string $extensionName name of the extension
+	 * @return string
+	 */
+	protected function getExtensionPrefix($extensionName) {
+		return str_replace('_', '', $extensionName);
+	}
+
+	/**
+	 * Gets the directory that holds classes.
+	 *
+	 * @param string $extensionPath full path of the extension
+	 * @return mixed The classes directory (if any) or FALSE otherwise
+	 */
+	protected function getExtensionClassesDirectory($extensionPath) {
+		$extensionClassesDirectory = FALSE;
+
+		if (@is_dir($extensionPath . 'Classes/')) {
+			$extensionClassesDirectory = 'Classes/';
+		} elseif (@is_dir($extensionPath . 'classes/')) {
+			$extensionClassesDirectory = 'classes/';
+		}
+
+		return $extensionClassesDirectory;
+	}
 }
-
-
 ?>
