@@ -1,3 +1,7 @@
+2011-02-07  Oliver Hader  <oliver.hader@typo3.org>
+
+	* Follow-up to feature #3386: Add the possibility to create autoload registry for extensions that already have a classes/ or Classes/ folder
+
 2010-12-31  Oliver Hader  <oliver@typo3.org>
 
 	* Added feature #11810: Integrate possibility to generate sprites
